--- a/src/test-tourney-logo-2.html
+++ b/src/test-tourney-logo-2.html
@@ -5,27 +5,95 @@
   	width: 600px;
   	height: 400px;
   }
+
   td {
   	line-height: .9em;
-  	color: white;
+		-webkit-text-stroke-width: .75px;
   	font-size: 48px;
 		font-family:  'Chuck Noon',Beleren, Georgia, 'Liberation Serif', 'DejaVu Serif', serif;
-		text-transform:capitalize; font-variant:small-caps;
-		bottom: 0; border-width: 1px;
-		padding: 0px 5px 0px 10px;
-    text-shadow: 0px 0px 5px rgba(0, 0, 3, 1);		
+		text-transform :capitalize;
+		bottom: 0;
+		padding: 0px 5px 0px 5px;
+    text-shadow: 0px 0px 5px rgba(1, 1, 1, 1);
 		margin: 0px;
   }
-  td.topRowBottomAligned {
-  	height:100%;
+  
+  td.dark {  
+  	color: #FFF;
+		-webkit-text-fill-color: black;
+  }
+
+  td.light {
+		-webkit-text-stroke-width: 1.25px;  	
+  	color: #000;
+		-webkit-text-fill-color: white;
+  }
+
+  td.bottom-row {
+  	padding-bottom: 2px;
+  }
+
+  td.top-row.top-aligned {
+  	vertical-align: top;
+  }
+
+  td.top-row.bottom-aligned {
+  	height: 100%;
   	vertical-align: bottom;
+  }
+
+  td.bottom-row.top-aligned {
+  	height: 100%;  	
+  	vertical-align: top;
+  }
+
+  td.bottom-row.bottom-aligned {
+  	vertical-align: bottom;
+  }
+
+  td.left-aligned {
+  	text-align: left;
+  }
+
+  td.right-aligned {
+  	text-align: right;
+  } 
+
+  td.right-aligned-image {
+  	margin-left: 100%;
+  }  
+
+  img.magic-logo {
+  	display: block;
+  	max-width: 250px;
+  	max-height: 80px;
+  	width: auto;
+  	height: auto;
   }
 
   </style>
 </head>
 <body>
 <table class="photo" cellspacing="0" cellpadding="0">
-  <tr> <td class="topRowBottomAligned"><img src="file:///D:/development/git/mtgnewsbot/src/data/images/mtg-logos/mtg-small-logo-2.png"></td> </tr> <tr> <td>Pro Tour</td></tr> <tr> <td>Boring Valley</td> </tr>
+
+  <tr>
+  	<td align="right" class="top-row top-aligned right-aligned-image"><img class="magic-logo" src="file:///D:/development/git/mtgnewsbot/src/data/images/mtg-logos/mtg-small-logo-2.png"></td>
+  </tr>
+  <tr>
+  	<td class="right-aligned"><img src="./data/images/tournament-logos/light/pro-tour-small-outlined.png"/></td></tr>
+  <tr>
+  	<td class="bottom-row top-aligned right-aligned light">Boring Valley</td>
+  </tr>
+
+<!--   <tr>
+  	<td class="top-row bottom-aligned"><img class="magic-logo" src="file:///D:/development/git/mtgnewsbot/src/data/images/mtg-logos/mtg-small-logo-2.png"></td>
+  </tr>
+  <tr>
+  	<td><img src="./data/images/tournament-logos/light/pro-tour-small-outlined.png"/></td></tr>
+  <tr>
+  	<td class="bottom-row bottom-aligned light">Boring Valley</td>
+  </tr> -->
+
 </table>
 
 </body>
