--- a/src/test-tourney-logo.html
+++ b/src/test-tourney-logo.html
@@ -1,8 +1,8 @@
-<head>
+><head>
   <style>
-    table.photo { width: 800px; height: 530px; background-size: 100% auto; margin: 20px; }
+    table.photo { width: 800px; height: 530px; background-size: 100% auto; }
 
-    table.photo-source { background-image: url(file:///D:/development/git/mtgnewsbot/src/data/images/tournaments/winners/william-jensen-3.jpg); }
+    table.photo-source { background-image: url(file:///D:/development/git/mtgnewsbot/src/data/images/tournaments/winners/ben-stark-2.jpg); }
 
     td { line-height: .9em; -webkit-text-stroke-width: .75px; font-size: 48px; font-family: 'Chuck Noon',Beleren,serif; text-transform :capitalize; bottom: 0; padding: 0px 5px 0px 5px; text-shadow: 0px 0px 5px rgba(1, 1, 1, 1); margin: 0px; }
 
@@ -12,22 +12,21 @@
 
     td.bottom-row { padding-bottom: 2px; }
 
-    td.top-row.top-aligned { vertical-align: top; padding-top: 20px; }
+    td.top-row.top-aligned { vertical-align: top; padding-top: 12px; }
 
     td.top-row.bottom-aligned { height: 100%; vertical-align: bottom; }
 
     td.bottom-row.top-aligned { height: 100%; vertical-align: top; }
 
-    td.bottom-row.bottom-aligned { vertical-align: bottom; padding-bottom: 20px; }
+    td.bottom-row.bottom-aligned { vertical-align: bottom; padding-bottom: 12px; }
 
-    td.left-aligned { text-align: left; padding-left: 20px; }
+    td.left-aligned { text-align: left; padding-left: 8px; }
 
-    td.left-aligned-image { margin-right: 100%;  padding-left: 20px; }
+    td.left-aligned-image { margin-right: 100%;  padding-left: 8px; }
 
-    td.right-aligned { text-align: right; padding-right: 20px; }
+    td.right-aligned { text-align: right; padding-right: 8px; }
 
-    td.right-aligned-image { margin-left: 100%; padding-right: 20px; }
-
+    td.right-aligned-image { margin-left: 100%; padding-right: 8px; }
 
     td.bottom-row-sized { width: 350px; }
 
@@ -44,14 +43,20 @@
 <body>
   <table class="photo photo-source" cellspacing="0" cellpadding="0">
     <tr>
-      <td align="right" class="top-row right-aligned-image top-aligned" colspan=2><img class="magic-logo" src="file:///D:/development/git/mtgnewsbot/src/data/images/mtg-logos/mtg-small-logo-2.png"></td>
+      <td align="left" class="top-row left-aligned-image top-aligned" colspan=2><img class="magic-logo" src="file:///D:/development/git/mtgnewsbot/src/data/images/mtg-logos/mtg-small-logo-2.png"></td>
     </tr>
     <tr>
-      <td class="right-aligned" colspan=2><img src="file:///D:/development/git/mtgnewsbot/src/data/images/tournaments/logos/dark/grand-prix-small-outlined.png"/></td></tr>
+      <td class="left-aligned" colspan=2><img src="file:///D:/development/git/mtgnewsbot/src/data/images/tournaments/logos/dark/pro-tour-small-outlined.png"/></td></tr>
     <tr>
-      <td class="fill-width"></td>
-      <td class="bottom-row right-aligned dark top-aligned bottom-row-sized">NEW VEGAS</td>
       <td class="no-width"></td>
+      <td class="bottom-row left-aligned dark top-aligned bottom-row-sized"><div style="float:left; zoom:60%;">
+
+<div style=" width: 760px; max-width: 800px height: 500px; vertical-align: top; overflow: visible; overflow-wrap: break-word;  padding: 10px 15px 20px 14px; text-align: left;line-height: 80px; -webkit-text-fill-color: DarkGreen; -webkit-text-stroke-width: 5px; -webkit-text-stroke-color: Gainsboro; font-size: 100px; font-family: Dungeons;font-weight: bold; -webkit-mask-image:url(http://pseudochaos.org/goodgamery/mtgnewsbot/images/textures/grit.png);">
+  Tournament Of Beekeepers
+</div>
+</div>
+</td>
+      <td class="fill-width"></td>
     </tr>
   </table>
 </body>
